# datetime-cpp

./: CMakeLists.txt  Makefile  README.md  build.sh  build_cmake.sh
cmake/: DateTimeConfig.cmake.in  datetime.pc.in
examples/: CMakeLists.txt  advanced_example.cpp  example.cpp  performance_test.cpp
include/: datetime.h
src/: datetime.cpp
tests/: CMakeLists.txt  test_arithmetic.cpp  test_basic.cpp  test_datetime.cpp  test_edge_cases.cpp  test_timedelta.cpp
